--- a/lesson2/geek-market-winter-base-app-less02/src/main/resources/application.properties
+++ b/lesson2/geek-market-winter-base-app-less02/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8091
 server.servlet.context-path=/wintermarket
 
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=none
 
